--- a/src/components/LetterView/LetterView.postcss
+++ b/src/components/LetterView/LetterView.postcss
@@ -54,6 +54,9 @@
         letter-spacing: calc(0.17 * var(--su));
         line-height: calc(var(--line) * var(--su));
         /* transition: line-height 0.2s; */
+        opacity: 0;
+        animation: paragraph-enter 0.5s forwards;
+        /* animation-delay: calc((var(--index) * 0.05s) + 0.1s); */
 
         &:empty::before {
           content: "";
@@ -75,11 +78,16 @@
         width: 100%;
         height: 100%;
 
-        /* &.animate-in { */
         scale: 0;
         animation: add-on-enter 0.2s forwards;
-        animation-delay: calc(var(--index) * 0.1s);
-        /* } */
+      }
+    }
+
+    &.stagger {
+      .addon-wrapper {
+        .add-on {
+          animation-delay: calc(var(--index) * 0.05s);
+        }
       }
     }
   }
@@ -93,5 +101,15 @@
 
   100% {
     scale: 1;
+  }
+}
+
+@keyframes paragraph-enter {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
