--- a/src/components/LetterView/LetterView.postcss
+++ b/src/components/LetterView/LetterView.postcss
@@ -54,8 +54,7 @@
         letter-spacing: calc(0.17 * var(--su));
         line-height: calc(var(--line) * var(--su));
         /* transition: line-height 0.2s; */
-        opacity: 0;
-        animation: paragraph-enter 0.5s forwards;
+        /* animation: paragraph-enter 0.5s forwards; */
         /* animation-delay: calc((var(--index) * 0.05s) + 0.1s); */
 
         &:empty::before {
